--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -67,7 +67,7 @@
       - pgdata:/var/lib/postgresql/data
       - ../docker-data/timescaledb/init:/docker-entrypoint-initdb.d/:rw
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}" ]
+      test: [ "CMD-SHELL", "su", "postgres", "-c", "'pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}'" ]
       interval: 10s
       timeout: 5s
       retries: 5
